# airsim_task

./: .gitignore  AI_CHAT_SETUP_GUIDE.md  AI_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  FIX_PYDANTIC_ERROR.md  HOW_TO_RUN.md  LICENSE  MANUAL_SETUP_GUIDE.md  README.md  start-all-services.bat  start-backend.bat  start-frontend.bat  start-simple.bat
ai-service/: FIX_AI_RESPONSE_FAILURE.md  FIX_INSTRUCTIONS.md  GEMINI_MODEL_CONFIG.md  NETWORK_TROUBLESHOOT.md  PROXY_SETUP_GUIDE.md  SOLUTION_ENV_TIMING.md  TROUBLESHOOTING_GUIDE.md  create_env.bat  env_template.txt  fix_env.py  requirements.txt  start-service-fixed.bat  start-with-proxy.bat  start_service.py  test_client_with_proxy.py  test_connections.py  test_env_timing.py  test_gemini.py  test_proxy_simple.py
ai-service/app/: __init__.py  main.py
ai-service/app/api/: __init__.py  chat.py
ai-service/app/core/: __init__.py  config.py
ai-service/app/gemini/: __init__.py  client.py  client_fixed.py  client_original.py  client_with_proxy.py  conversation.py  fallback_client.py
ai-service/app/mcp/: __init__.py  client.py  tools.py
ai-service/app/models/: __init__.py  chat.py
backend/: README.md  environment-ai.yml  environment.yml  pyproject.toml  requirements.txt  run.sh  test_env.py
backend/app/: __init__.py  main.py
backend/app/ai/: README.md  __init__.py
backend/app/api/: chat.py  control.py  status.py
backend/app/core/: config.py  drone_client.py  websocket.py
backend/app/mcp/: __init__.py  server.py
backend/app/models/: drone.py
frontend/: AI_CHAT_GUIDE.md  AI_CHAT_POSITION_FIX.md  CHAT_INTEGRATION.md  CURRENT_ISSUE_ANALYSIS.md  DEBUG_CHAT.md  FIX_CHAT_CONNECTION.md  FIX_CHAT_DUPLICATE.md  FIX_CHAT_POSITION.md  FIX_MESSAGE_COLOR.md  FIX_TELEMETRY_ERROR.md  FIX_UNDEFINED_TELEMETRY.md  FIX_USER_MESSAGE_DISPLAY.md  README.md  USE_DEBUG_CHAT.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  test-ai.tsx
frontend/app/test-styles/: page.tsx
frontend/components/drone/: ControlPanel.tsx  Drone3DView.tsx  StatusDisplay.tsx  TelemetryChart.tsx
frontend/components/ui/: Button.tsx  Card.tsx
frontend/lib/api/: drone.ts
frontend/lib/hooks/: useWebSocket.ts
frontend/types/: drone.ts
frontend/utils/: telemetryHelpers.ts
notes/: 0719.txt
old_scripts/: CONDA_ACTIVATION_SOLUTIONS.md  quick-start.bat  start-all.ps1  start-backend-conda-run.bat
(+12 files in other folders)
