[project]
name = "airsim-drone-control"
version = "0.1.0"
description = "AirSim Drone Control Service with FastAPI"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}
authors = [
    { name = "AirSim Drone Control Team" }
]
keywords = ["airsim", "drone", "fastapi", "control", "simulation"]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "airsim>=1.8.1",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
    "pyyaml>=6.0.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.5",
    "mypy>=1.7.0",
]

# Future AI capabilities
ai = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "opencv-python>=4.8.0",
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.0",
]

# Production deployment
prod = [
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/airsim-drone-control"
Documentation = "https://github.com/yourusername/airsim-drone-control/wiki"
Issues = "https://github.com/yourusername/airsim-drone-control/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.uv]
python-preference = "only-managed"
python-downloads = true 